--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "test-client": "node test-client.js",
-    "build": "esbuild workers/entry.js --bundle --outfile=dist/worker.js --platform=browser --target=es2020",
+    "build": "esbuild workers/entry.js --bundle --outfile=dist/worker.js --platform=browser --target=es2020 --format=esm",
     "deploy:wrangler": "wrangler publish --build \"npm run build\""
   },
   "engines": {
