--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node index.js",
     "test-client": "node test-client.js",
     "build": "esbuild workers/entry.js --bundle --outfile=dist/worker.js --platform=browser --target=es2020 --format=esm",
+    "ci:install": "npm ci --omit=dev --no-audit --no-fund",
+    "ci:build": "npm run ci:install && npm run build",
+    "deploy:ci": "npx --yes wrangler@3.6.0 deploy --outdir dist --no-bundle",
     "deploy:wrangler": "wrangler publish --build \"npm run build\""
   },
   "engines": {
